[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/login.gd" type="Script" id=1]
[ext_resource path="res://scenes/input.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/load.png" type="Texture" id=3]
[ext_resource path="res://assets/square.png" type="Texture" id=4]
[ext_resource path="res://icon_2.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/gill-sans.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 35
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=1]
resource_name = "loader"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[node name="login" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.262745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 720, 1280 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Login"]
margin_left = 49.0
margin_top = 348.0
margin_right = 683.0
margin_bottom = 443.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Login"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Login"]
margin_left = 50.0
margin_top = 472.0
margin_right = 670.0
margin_bottom = 1464.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputName" parent="CanvasLayer/Login/VBoxContainer" instance=ExtResource( 2 )]
placeholder_text = "First name..."

[node name="inputLastname" parent="CanvasLayer/Login/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 96.0
margin_bottom = 172.0
placeholder_text = "Last name..."

[node name="inputCodename" parent="CanvasLayer/Login/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 192.0
margin_bottom = 268.0
placeholder_text = "Codename..."

[node name="inputEmail" parent="CanvasLayer/Login/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 288.0
margin_bottom = 364.0

[node name="inputPasswordCode" parent="CanvasLayer/Login/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 384.0
margin_bottom = 460.0
placeholder_text = "Enter reset code..."

[node name="inputPassword" parent="CanvasLayer/Login/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 480.0
margin_bottom = 556.0
secret = true
placeholder_text = "Password..."

[node name="inputPassword2" parent="CanvasLayer/Login/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 576.0
margin_bottom = 652.0
secret = true
placeholder_text = "Confirm password..."

[node name="ControlButtons" type="Control" parent="CanvasLayer/Login/VBoxContainer"]
margin_top = 700.0
margin_right = 620.0
margin_bottom = 880.0
rect_min_size = Vector2( 0, 180 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Login/VBoxContainer/ControlButtons"]
margin_right = 620.0
margin_bottom = 130.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCancel" type="Control" parent="CanvasLayer/Login/VBoxContainer/ControlButtons/HBoxContainer"]
anchor_top = 0.184615
anchor_bottom = 0.184615
margin_left = 32.0
margin_right = 302.0
margin_bottom = 130.0
rect_min_size = Vector2( 270, 96 )

[node name="btn" type="TouchScreenButton" parent="CanvasLayer/Login/VBoxContainer/ControlButtons/HBoxContainer/btnCancel"]
modulate = Color( 0.152941, 0.152941, 0.152941, 1 )
scale = Vector2( 26.6857, 9.27795 )
normal = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer/Login/VBoxContainer/ControlButtons/HBoxContainer/btnCancel"]
margin_right = 261.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Cancel"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnConfirm" type="Control" parent="CanvasLayer/Login/VBoxContainer/ControlButtons/HBoxContainer"]
anchor_top = 0.184615
anchor_bottom = 0.184615
margin_left = 317.0
margin_right = 587.0
margin_bottom = 130.0
rect_min_size = Vector2( 270, 96 )

[node name="btn" type="TouchScreenButton" parent="CanvasLayer/Login/VBoxContainer/ControlButtons/HBoxContainer/btnConfirm"]
modulate = Color( 0.152941, 0.152941, 0.152941, 1 )
scale = Vector2( 26.6857, 9.27795 )
normal = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer/Login/VBoxContainer/ControlButtons/HBoxContainer/btnConfirm"]
margin_right = 261.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Entrar"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlLinks" type="Control" parent="CanvasLayer/Login/VBoxContainer"]
margin_top = 872.0
margin_right = 620.0
margin_bottom = 1022.0
rect_min_size = Vector2( 620, 150 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Login/VBoxContainer/ControlLinks"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 620, 0 )
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="linkForgotPassword" type="Control" parent="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer"]
margin_left = 5.0
margin_right = 285.0
margin_bottom = 150.0
rect_min_size = Vector2( 280, 0 )

[node name="Label" type="Label" parent="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer/linkForgotPassword"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.596078, 0.596078, 0.596078, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Forgot password"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="link" type="TouchScreenButton" parent="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer/linkForgotPassword"]
modulate = Color( 0.643137, 0.180392, 0.180392, 0 )
position = Vector2( 0, 23.844 )
scale = Vector2( 27.528, 10.1646 )
normal = ExtResource( 4 )

[node name="Separator" type="Control" parent="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer"]
margin_left = 300.0
margin_right = 320.0
margin_bottom = 150.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer/Separator"]
margin_top = 52.0
margin_right = 1.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.596078, 0.596078, 0.596078, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "|"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="linkNewUser" type="Control" parent="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer"]
margin_left = 335.0
margin_right = 615.0
margin_bottom = 150.0
rect_min_size = Vector2( 280, 0 )

[node name="Label" type="Label" parent="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer/linkNewUser"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.596078, 0.596078, 0.596078, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "New user"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="link" type="TouchScreenButton" parent="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer/linkNewUser"]
modulate = Color( 0.643137, 0.180392, 0.180392, 0 )
position = Vector2( 0, 23.844 )
scale = Vector2( 30.9281, 10.1646 )
normal = ExtResource( 4 )

[node name="loader" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 343, 504.398 )
texture = ExtResource( 3 )
hframes = 23

[node name="anim" type="AnimationPlayer" parent="CanvasLayer/loader"]
autoplay = "loader"
playback_speed = 1.5
anims/loader = SubResource( 1 )

[node name="Header" type="ColorRect" parent="CanvasLayer"]
margin_right = 720.0
margin_bottom = 300.0
color = Color( 0.52549, 0.0313726, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="CanvasLayer/Header"]
position = Vector2( 360, 150 )
texture = ExtResource( 5 )
[connection signal="pressed" from="CanvasLayer/Login/VBoxContainer/ControlButtons/HBoxContainer/btnCancel/btn" to="." method="_on_btnCancel_pressed"]
[connection signal="pressed" from="CanvasLayer/Login/VBoxContainer/ControlButtons/HBoxContainer/btnConfirm/btn" to="." method="_on_btnConfirm_pressed"]
[connection signal="pressed" from="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer/linkForgotPassword/link" to="." method="_on_linkForgotPass_pressed"]
[connection signal="pressed" from="CanvasLayer/Login/VBoxContainer/ControlLinks/HBoxContainer/linkNewUser/link" to="." method="_on_linkNewUser_pressed"]
